--- a/views/listings/index.ejs
+++ b/views/listings/index.ejs
@@ -1,9 +1,116 @@
 <% layout('layouts/boilerplate.ejs') %>
+<style>
+    .filter {
+        margin-top: 1rem;
+        text-align: center;
+        margin-right: 2rem;
+        margin-top: 1.5rem;
+        opacity: 0.7;
+    }
+    #filters {
+        display: flex;
+        flex-wrap: wrap;
+        align-items: center;
+    }
+    .filter:hover {
+        opacity: 1;
+        cursor: pointer;
+    }
+    .filter:p{
+        font-size: large;
+    }
 
-<body>
-<h1>All Listings</h1>
+    .tax-info {
+        display: none;
+    }
 
-<div class="row row-cols-lg-4 row-cols-md-2 row-col-sm-1">
+    .tax-toggle {
+        border: 1px solid black;
+        border-radius: 1rem;
+        height: 3.25 rem;
+        padding: 1rem;
+        margin-left: 1rem;
+        display: flex;
+        align-items: center;
+    }
+</style>
+<div id="filters">
+    <div class="filter">
+        <div>
+            <i class="fa-solid fa-fire"></i>
+        </div>
+        <p>Trending</p>
+    </div>
+    <div class="filter">
+        <div>
+            <i class="fa-solid fa-bed"></i>
+        </div>
+        <p>Rooms</p>
+    </div>
+    <div class="filter">
+        <div>
+            <i class="fa-solid fa-mountain-sun"></i>
+        </div>
+        <p>Mountains</p>
+    </div>
+    <div class="filter">
+        <div>
+            <i class="fa-solid fa-chess-rook"></i>
+        </div>
+        <p>castle</p>
+    </div>
+    <div class="filter">
+        <div>
+            <i class="fa-solid fa-person-swimming"></i>
+        </div>
+        <p>Pools</p>
+    </div>
+    <div class="filter">
+        <div>
+            <i class="fa-solid fa-campground"></i>
+        </div>
+        <p>Camping</p>
+    </div>
+    <div class="filter">
+        <div>
+            <i class="fa-solid fa-cow"></i>
+        </div>
+        <p>Farms</p>
+    </div>
+    <div class="filter">
+        <div>
+            <i class="fa-solid fa-snowflake"></i>
+        </div>
+        <p>Arctic</p>
+    </div>
+    <div class="filter">
+        <div>
+            <i class="fa-solid fa-crown"></i>
+        </div>
+        <p>Luxury</p>
+    </div>
+    <div class="filter">
+        <div>
+            <i class="fa-solid fa-water"></i>
+        </div>
+        <p>Lake Front</p>
+    </div>
+    <div class="filter">
+        <div>
+            <i class="fa-solid fa-umbrella-beach"></i>
+        </div>
+        <p>Beach</p>
+    </div>
+
+    <div class="tax-toggle">
+        <div class="form-check-reverse form-switch">
+            <input class="form-check-input" type="checkbox" role="switch" id="flexSwitchCheckDefault">
+            <label class="form-check-label" for="flexSwitchCheckDefault">Display total after Taxes</label>
+        </div>
+    </div>
+</div>
+
+<div class="row row-cols-lg-4 row-cols-md-2 row-col-sm-1 mt-3">
     <% for (let listing of allListings) { %> 
         <a href="/listings/<%= listing.id %>" class="listing-link">
             <div class="card col listing-card">
@@ -17,6 +124,7 @@
                     <p class="card-text">
                         <b><%= listing.title %></b> <br>
                         Price: <%= (listing.price ? listing.price.toLocaleString('en-IN') : 'N/A') %> / night
+                        <i class="tax-info"> &nbsp;+18% gst </i>
                     </p>
                 </div>
             </div>
@@ -24,4 +132,14 @@
     <% } %>
 </div>
 
-</body>
+<script>
+    let taxswitch=document.getElementById("flexSwitchCheckDefault");
+    taxswitch.addEventListener("click",()=>{
+        let taxInfo=document.getElementsByClassName("tax-info");
+        for(info of taxInfo){
+            if(info.style.display!="inline"){
+                info.style.display="inline"
+            }else info.style.display="none"
+        }
+    })
+</script>
